plugins {
    id 'java'
}

group 'cs4120.cyr7'
version '1.0'

sourceCompatibility = 11

repositories {
    mavenCentral()
}

dependencies {
    compile fileTree(dir: 'dependencies', include: ['*.jar'])
    implementation 'org.testng:testng:6.9.6'
}

jar {
    manifest {
        attributes "Main-Class": "cyr7.cli.CLI"
    }

    from {
        configurations.compile.collect { it.isDirectory() ? it : zipTree(it) }
    }
}

sourceSets {
    main {
        java {
            srcDirs = ['src/java']
        }
        resources {
            srcDirs = ['src/resources']
        }
    }
    test {
        java {
            srcDirs = ['tests/java']
        }
        resources {
            srcDirs = ['tests/resources']
        }
    }
}

test {
    useJUnitPlatform()
    enableAssertions = true
    testLogging {
        events "passed", "skipped", "failed"
    }
}
